<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PolyDroid Offline Dictionary</string>
    <string name="app_version">v 1.1</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="quit">Quit</string>
    <string name="really_quit">Do You Really Want To Quit?</string>
    <string name="yes">Yes</string>
    <string name="d_quit">Back Or Quit</string>
    <string name="d_really_quit">Go back or quit from application</string>
    <string name="d_no">Go Back</string>
    <string name="no">No</string>
    <string name="evveli">Beginning</string>
    <string name="ortasi">Middle</string>
    <string name="sonu">End</string>
    <string name="autosearch">Type to Search</string>
    <string name="contentDescription">What</string>
    <string name="info">My Name Is Togrul Seyidov I am From Azerbaijan my E-mail: togrul.seyid93@gmail.com</string>
    <string name="aboutus">\nDeveloper: <b><a href="http://togrulseyid.com/">Toghrul Seyidov</a></b>\nE-mail: info@togrulseyid.com\nThis application developed by getting inspired from <b><a href="http://www.hackathonazerbaijan.org/">HackathonAzerbaijan</a></b></string>
    <string name="prompt">PolyDroid (Select language)</string>
    <string name="herif1">ə</string>
    <string name="herif2">ç</string>
    <string name="herif3">ğ</string>
    <string name="herif4">ı</string>
    <string name="herif5">ö</string>
    <string name="herif6">ş</string>
    <string name="herif7">ü</string>
    <string name="languages">Loading Language</string>
    <string name="download">Download</string>
    <string name="button">Button</string>
    <string name="azen">Azəri - English</string>
    <string name="enaz">English - Azəri</string>
    <string name="text_size">Text Size</string>
    <string name="text_direction">Text Displaying Options</string>
    <string name="you_can_easly">You can easly change view of Polydroid. You can choose size, color, opening type of the Words</string>
    <string name="rgb_color_code">RGB(0,0,0)</string>
    <string name="message_loading">Loading...</string>
    <!-- <![CDATA[&#8230;]]> -->
    <string name="confirm_dialog_delete_title">Delete?</string>
    <string name="confirm_dialog_delete_body">Are you sure to delete database?</string>
    <string name="fragment_settings_tab_database_list_niconn">No internet Connection!</string>
    <string name="fragment_settings_tab_about_web_site">http://togrulseyid.com/about</string>
    <string name="nothing_found_in_db">There is no such word in our Database</string>
    <string name="araz">Ərəb - Azəri</string>
    <string name="azar">Azəri - Ərəb</string>
    <string name="download_button">Languages</string>
    <string name="download_button_on">Download</string>
    <string name="download_button_of">Remove</string>
    <string name="chose_your_style">Chose Your Style</string>
    <string name="new_tab">New Tab \t  (Displays word in new tab)</string>
    <string name="popup">Popup \t (Displays word in popup dialog)</string>
    <string name="half">Half \t ( underconstruction )</string>
    <string name="button_fragment_settings_tab_style_reset">Reset</string>
    <string name="license">        Copyright [2013] [Polydroid Offline Dictionary]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this application except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>

</resources>