<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical"
        android:weightSum="10" >

        <Spinner
            android:id="@+id/languages"
            style="@style/PolyDroid.Spinner.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="6"
            android:clipChildren="true"
            android:drawSelectorOnTop="true"
            android:prompt="@string/prompt"
            android:scrollbarStyle="outsideOverlay"
            android:tag="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:gravity="center|center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Beige2"
            android:drawableRight="@drawable/edittext_clear_selector"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:textColor="@color/background_action_bar"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/searchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_search_selector"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/White" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/herif2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_1"
                android:text="@string/herif2" />

            <Button
                android:id="@+id/herif1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_2"
                android:text="@string/herif1" />

            <Button
                android:id="@+id/herif3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_1"
                android:text="@string/herif3" />

            <Button
                android:id="@+id/herif4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_2"
                android:text="@string/herif4" />

            <Button
                android:id="@+id/herif5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_1"
                android:text="@string/herif5" />

            <Button
                android:id="@+id/herif6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_2"
                android:text="@string/herif6" />

            <Button
                android:id="@+id/herif7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/small_buttons_1"
                android:text="@string/herif7" />
        </LinearLayout>

        <TableRow android:background="@color/Beige2" >

            <ListView
                android:id="@+id/contentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:choiceMode="singleChoice"
                android:contentDescription="@string/app_name"
                android:fastScrollEnabled="true" />
        </TableRow>
    </TableLayout>

</LinearLayout>